# Scythe

./: .gitignore  README.md  __main__.py  auto.py  pyproject.toml  script.py  simulation.py
src/scythe/data/: __init__.py  ingestion.py  preprocessing.py  readme.md  utils.py
src/scythe/integration/: hyper_memory_manager.py
src/scythe/optimizer/: __init__.py  constraints.py  heuristics.py  multi_objective.py  plan_optim.py  post_processing.py  scenario_generator.py  solver_interface.py  validation.py
src/scythe/orchestrator/: config.py  orchestrator.py  pipeline.py
src/scythe/sdm/: __init__.py  readme.md  sdm_module.py  utils.py  vsa_module.py
src/scythe/transformer/: __init__.py  config.py  dataset.py  inference.py  model.py  readme.md  train.py  utils.py
src/scythe/transformer/modules/: hyperbolic_attention.py  hyperbolic_cube.py  positional_encoding.py  postnet.py  prenet.py  readme.md  specialized_layer.py
tests/: __init__.py  test_plan_optim.py  test_preprocess_data.py  test_sdm_module.py  test_vsa_module.py
